# Gstreamer-Transcode

./: CMakeLists.txt  DirectTranscoding.cpp  DirectTranscoding.h  FileSrcTask.cpp  GstUtil.cpp  IVCTInterface.h  JpgTranscoding.h  PacketQueue.cpp  PacketQueue.h  README.md  RtpTask.cpp  RtpTask.h  RtspTask.cpp  StatusQueue.cpp  StatusQueue.h  TaskFlow.cpp  TaskFlow.h  YuvTask.h  main.c  ptsdef.h
code/: AudioFilterTask.cpp  AudioFilterTask.h  CGDKInterface.h  CVCTInterface.h  DebugLog.cpp  DebugLog.h  EncodingTask.cpp  EncodingTask.h  EnhanceTask.cpp  EnhanceTask.h  FilesrcTask.h  GstTask.cpp  GstTask.h  GstUtil.h  IGDKInterface.cpp  IVCTInterface.cpp  JpgTranscoding.cpp  RtspTask.h  TaskManager.cpp  TaskManager.h  YuvTask.cpp  define.h
